[gd_scene load_steps=5 format=3 uid="uid://c1tfvp3b4m80s"]

[ext_resource type="Script" path="res://script/player_with_pistol.gd" id="1_2730b"]
[ext_resource type="PackedScene" uid="uid://dubaka086frrj" path="res://scene/player.tscn" id="1_bdhao"]
[ext_resource type="PackedScene" uid="uid://c4rpku6ibinv0" path="res://scene/pistol_bullet.tscn" id="2_6db16"]
[ext_resource type="PackedScene" uid="uid://c0pac7l2gdh4s" path="res://scene/pistol.tscn" id="2_i38yt"]

[node name="Player_with_pistol" type="Node2D"]
script = ExtResource("1_2730b")
bullet_scene = ExtResource("2_6db16")

[node name="Player" parent="." instance=ExtResource("1_bdhao")]

[node name="Pistol" parent="Player" instance=ExtResource("2_i38yt")]
position = Vector2(210, 14)

[node name="fire_delay" type="Timer" parent="."]

[connection signal="shot" from="." to="." method="_on_pistol_shot"]
[connection signal="timeout" from="fire_delay" to="." method="_on_fire_delay_timeout"]
